# pebble_server

./: Cargo.toml  example.env
bcrypt/: Cargo.toml
migrations/: 001_initial.sql
src/: main.rs
src/controllers/: controller_auth.rs  controller_badge.rs  controller_user.rs  mod.rs
src/database/: db.rs
src/errors/: error.rs
src/models/: mod.rs  model_badge.rs  model_user.rs
src/routes/: mod.rs  route_auth.rs  route_badge.rs  route_user.rs
src/services/: mod.rs  service_auth.rs  service_user.rs
unit_tests/: package-lock.json  package.json  tsconfig.json
unit_tests/test/: index.ts
