[package]
name = "resty"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
axum-extra = { version = "0.7.2", features = ["cookie"] }
tower = "0.4"
tower-http = {version = "0.5.2", features = ["cors"]}
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
bcrypt = { path = "./bcrypt" }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
socketioxide = "0.13.1"
solana-sdk = "=2.0.0"
solana-client = "=2.0.0"
borsh = "1.5.1"

[dependencies.uuid]
version = "1.8.0"
features = [
    "serde",             # Enable serialization/deserialization of UUIDs
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

